--- a/production.env
+++ b/production.env
@@ -11,4 +11,4 @@ REFRESH_TOKEN_LIFE=30d
 BCRYPT_SALT_ROUNDS=10
 
 # Application variables
-SCHEDULE_MODE="regular # mid-term | final-term | ramadan"
+SCHEDULE_MODE="regular" # mid-term | final-term | ramadan
