Storing error log has been implemented

--- a/production.env
+++ b/production.env
@@ -2,7 +2,6 @@ NODE_ENV=production
 PORT=4000
 DATABASE_URL=mongodb+srv://md_musa:quvqc8rO@cluster-1.4gula.mongodb.net/TMS?retryWrites=true&w=majority
 
-# JWT Secret
 ACCESS_TOKEN_SECRET=musa
 ACCESS_TOKEN_LIFE=10d
 REFRESH_TOKEN_SECRET=musa
@@ -10,5 +9,4 @@ REFRESH_TOKEN_LIFE=30d
 
 BCRYPT_SALT_ROUNDS=10
 
-# Application variables
-SCHEDULE_MODE="regular" # mid-term | final-term | ramadan
+SCHEDULE_MODE="regular"
