Token-based auth has been implmented

--- a/development.env
+++ b/development.env
@@ -1,14 +1,14 @@
-NODE_ENV = development
-PORT = 4000
-DATABASE_URL=mongodb://localhost:27017/TMS 
+NODE_ENV=development
+PORT=4000
+DATABASE_URL=mongodb://localhost:27017/TMS
 BCRYPT_SALT_ROUNDS=10
 
 # JWT Secret
-ACCESS_TOKEN_SECRET = musa
-ACCESS_TOKEN_LIFE = 10d
-REFRESH_TOKEN_SECRET = musa
-REFRESH_TOKEN_LIFE = 30d
+ACCESS_TOKEN_SECRET=musa
+ACCESS_TOKEN_LIFE=10m
+REFRESH_TOKEN_SECRET=musa
+REFRESH_TOKEN_LIFE=1h
 
 
 # Application variables
-SCHEDULE_MODE = regular # mid-term | final-term | ramadan
+SCHEDULE_MODE=regular
