--- a/development.env
+++ b/development.env
@@ -1,13 +1,15 @@
 NODE_ENV=development
 PORT=4000
-DATABASE_URL=mongodb://localhost:27017/TMS
+# DATABASE_URL=mongodb://localhost:27017/TMS
+DATABASE_URL=mongodb+srv://md_musa:quvqc8rO@cluster-1.4gula.mongodb.net/TMS?retryWrites=true&w=majority
+
 BCRYPT_SALT_ROUNDS=10
 
 # JWT Secret
 ACCESS_TOKEN_SECRET=musa
-ACCESS_TOKEN_LIFE=10m
+ACCESS_TOKEN_LIFE=1d
 REFRESH_TOKEN_SECRET=musa
-REFRESH_TOKEN_LIFE=1h
+REFRESH_TOKEN_LIFE=3d
 
 
 # Application variables
