--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.2.1",
     "mongoose": "^8.9.5",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
