--- a/production.env
+++ b/production.env
@@ -1,11 +1,11 @@
 NODE_ENV=production
 PORT=4000
-DATABASE_URL=mongodb+srv://md_musa:quvqc8rO@cluster-1.4gula.mongodb.net/TMS?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://md_musa:quvqc8rO@cluster-1.4gula.mongodb.net/cholo_prod?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET=musa
-ACCESS_TOKEN_LIFE=1m
+ACCESS_TOKEN_LIFE=3m
 REFRESH_TOKEN_SECRET=musa
-REFRESH_TOKEN_LIFE=2m
+REFRESH_TOKEN_LIFE=6m
 
 BCRYPT_SALT_ROUNDS=10
 
